tests/golden/grafana-ingress/prometheus/prometheus/10_prometheusOperator_clusterRoleBinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  annotations:
    source: https://github.com/projectsyn/component-prometheus
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: syn-prometheus-operator
    app.kubernetes.io/part-of: syn
    app.kubernetes.io/version: 0.57.0
  name: syn-prometheus-operator
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: syn-prometheus-operator
subjects:
  - kind: ServiceAccount
    name: syn-prometheus-operator
    namespace: syn-prometheus-operator
