tests/golden/grafana-ingress/prometheus/prometheus/40_default-instance_grafana_config.yaml
apiVersion: v1
kind: Secret
metadata:
  annotations:
    source: https://github.com/projectsyn/component-prometheus
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: grafana-default-instance
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 8.5.5
  name: grafana-config
  namespace: syn-prometheus
stringData:
  grafana.ini: |
    [date_formats]
    default_timezone = UTC
type: Opaque
