tests/golden/grafana-ingress/prometheus/prometheus/40_default-instance_grafana_synIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    source: https://github.com/projectsyn/component-prometheus
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/part-of: syn
    name: grafana
  name: grafana
  namespace: syn-prometheus
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.example.com
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana.example.com
      secretName: grafana-tls
