tests/golden/grafana-ingress/prometheus/prometheus/40_default-instance_grafana_synIngressNetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    source: https://github.com/projectsyn/component-prometheus
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/part-of: syn
    name: grafana-ingress
  name: grafana-ingress
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: syn-ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
        - port: 3000
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana-default-instance
